# laurel

./: Cargo.toml
crates/laurel_common/: Cargo.toml
crates/laurel_common/src/: action.rs  appearance.rs  lib.rs
crates/laurel_common/src/appearance/: button.rs  container.rs  rule.rs  scrollable.rs  text.rs  text_input.rs
crates/laurel_common/src/text/: mod.rs  selection.rs
crates/laurel_editor/: Cargo.toml
crates/laurel_editor/src/: lib.rs
crates/laurel_editor/src/core/: buffer.rs  document.rs  document_change.rs  mod.rs  position.rs  window.rs
crates/laurel_editor/src/highlighter/: color_selector.rs  mod.rs
crates/laurel_editor/src/lsp/: client.rs  connect.rs  diagnostics.rs  error.rs  mod.rs
crates/laurel_editor/src/widgets/: layout.rs  main_view.rs  mod.rs  textbox.rs  textbox_container.rs  view_port.rs
crates/laurel_editor/src/widgets/floating_text/: floating_overlay.rs  floating_text_element.rs  mod.rs
crates/laurel_editor/src/widgets/modal/: file_selector.rs  mod.rs  modal_overlay.rs
crates/laurel_lsp/: Cargo.toml
crates/laurel_lsp/src/: client.rs  connect.rs  diagnostics.rs  error.rs  lib.rs
crates/laurel_ui/: Cargo.toml
crates/laurel_ui/src/: app.rs  main.rs  ui.rs
crates/laurel_ui/src/ui/: icon.rs  left_pane.rs  right_pane.rs
