[workspace]
members = ["crates/*"]
resolver = "2"
edition = "2024"


[workspace.dependencies]
iced = { version = "0.14.0-dev", default-features = false, features = [
  "wgpu",
  "canvas",
  "tiny-skia",
  "fira-sans",
  "tokio",
  "lazy",
  "advanced",
  "image",
] }
laurel_common = { path = "crates/laurel_common" }

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git" }
