[package]
name = "laurel_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["iced/debug"]

[dependencies]
ropey = "1.6.0"
unicode-segmentation = "1"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
futures = "0.3.28"
jsonrpc-lite = "0.6.0"
serde = "1.0.189"
serde_json = "1.0.107"
smol = "1.3.0"
rfd = "0.12.1"
fuzzy-matcher = "*"
async-lsp = { version = "0.2.2", features = ["tracing"] }

iced.workspace = true
laurel_common.workspace = true
laurel_lsp.workspace = true

tokio = { version = "1.44.2", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
