[package]
name = "laurel_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["iced/debug"]

[dependencies]
ropey = "1.6.0"
unicode-segmentation = "1"
tree-sitter-rust = "0.20.3"
rfd = "0.12.1"
fuzzy-matcher = "*"

async-lsp.workspace = true
tree-sitter.workspace = true

iced.workspace = true
laurel_common.workspace = true
laurel_lsp.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
