[package]
name = "laurel_lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
iced.workspace = true
laurel_common.workspace = true

futures = "0.3.28"
thiserror = "1.0.51"

async-lsp.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
